# shopman-stockman

./: .gitignore  LICENSE  README.md  pyproject.toml  stockman_test_settings.py
shopman/stockman/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  service.py  shelflife.py  signals.py
shopman/stockman/adapters/: __init__.py  craftsman.py  noop.py  offerman.py
shopman/stockman/api/: serializers.py  urls.py  views.py
shopman/stockman/contrib/: __init__.py
shopman/stockman/contrib/admin_unfold/: __init__.py  admin.py  apps.py
shopman/stockman/contrib/alerts/: __init__.py  apps.py  conf.py  handlers.py
shopman/stockman/management/: __init__.py
shopman/stockman/management/commands/: release_expired_holds.py
shopman/stockman/migrations/: 0001_initial.py
shopman/stockman/models/: __init__.py  alert.py  batch.py  enums.py  hold.py  move.py  position.py  quant.py
shopman/stockman/protocols/: __init__.py  production.py  sku.py
shopman/stockman/services/: __init__.py  alerts.py  holds.py  movements.py  planning.py  queries.py
shopman/stockman/tests/: __init__.py  conftest.py  test_alert_handlers.py  test_api.py  test_availability.py  test_integration.py  test_planned_holds.py  test_service.py  urls.py
